# aflgo

./: Readme.md  afl-fuzz.c
distance_calculator/: CMakeLists.txt  main.cpp
llvm_mode/: afl-clang-fast.c  afl-llvm-pass.so.cc
scripts/: distance.py  gen_distance_fast.py
